<resources>
    <string name="fluent_notifications_name">Fluent Notifications</string>

    <string name="action_show_notification">Show notification</string>
    <string name="helper_text_empty"> </string>
    <string name="helper_text_required">Required</string>
    <string name="toggle_notification_delay">Delay 3s</string>

    <!-- Channel -->
    <string name="group_channel">Channel</string>
    <string name="hint_channel_id">Channel id</string>
    <string name="hint_channel_name">Channel name</string>

    <!-- Notification -->
    <string name="group_notification">Notification</string>
    <string name="hint_notification_id">Notification id</string>
    <string name="hint_notification_tag">Notification tag</string>
    <string name="hint_notification_title">Notification title</string>
    <string name="hint_notification_content">Notification content</string>

    <!-- Group -->
    <string name="action_use_group">Use group</string>
    <string name="group_notification_group_by">Group by</string>
    <string name="hint_group_id">Group id</string>
    <string name="hint_group_tag">Group tag</string>
    <string name="hint_group_title">Group title</string>
    <string name="hint_group_content">Group content</string>

</resources>
