<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".DemoActivity"
    tools:theme="@style/AppTheme">

    <!-- region AppBar -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleEnabled="false"
            app:layout_scrollFlags="scroll|enterAlways">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/fluent_notifications_name" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <!-- endregion -->

    <!-- region NestedScrollView -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/windowHorizontalMargin"
            android:paddingTop="@dimen/windowVerticalMargin"
            android:paddingEnd="@dimen/windowHorizontalMargin"
            android:paddingBottom="@dimen/windowHorizontalMargin">

            <!-- region Common -->
            <!-- Id -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/helper_text_required">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/notificationIdInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/hint_notification_id" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Tag -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText=" ">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/notificationTagInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:hint="@string/hint_notification_tag" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- endregion -->

            <!-- region Channel -->
            <studio.forface.fluentnotifications.demo.ExpandableLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Header -->
                <studio.forface.fluentnotifications.demo.ExpandableLinearLayoutHeader
                    android:theme="@style/App.ExpandableLinearLayoutHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/group_channel" />

                <!-- Title -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperText="@string/helper_text_required">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/channelIdInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions"
                        android:hint="@string/hint_channel_id" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Content -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperText="@string/helper_text_required">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/channelNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:hint="@string/hint_channel_name" />
                </com.google.android.material.textfield.TextInputLayout>

            </studio.forface.fluentnotifications.demo.ExpandableLinearLayout>
            <!-- endregion -->

            <!-- region Notification -->
            <studio.forface.fluentnotifications.demo.ExpandableLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Header -->
                <studio.forface.fluentnotifications.demo.ExpandableLinearLayoutHeader
                    android:theme="@style/App.ExpandableLinearLayoutHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/group_notification" />

                <!-- Title -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperText="@string/helper_text_required">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/notificationTitleInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:hint="@string/hint_notification_title" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Content -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperText=" ">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/notificationContentInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:hint="@string/hint_notification_content" />
                </com.google.android.material.textfield.TextInputLayout>

            </studio.forface.fluentnotifications.demo.ExpandableLinearLayout>
            <!-- endregion -->

            <!-- region Group -->
            <CheckBox
                android:id="@+id/useGroupCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_use_group"/>

            <studio.forface.fluentnotifications.demo.ExpandableLinearLayout
                android:id="@+id/groupLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Header -->
                <studio.forface.fluentnotifications.demo.ExpandableLinearLayoutHeader
                    android:theme="@style/App.ExpandableLinearLayoutHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/group_notification_group_by" />

                <!-- Id -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperText="@string/helper_text_required">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/groupIdInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/hint_group_id" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Tag -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperText=" ">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/groupTagInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:hint="@string/hint_group_tag" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Title -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperText="@string/helper_text_required">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/groupTitleInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:hint="@string/hint_group_title" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Content -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperText=" ">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/groupContentInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:hint="@string/hint_group_content" />
                </com.google.android.material.textfield.TextInputLayout>

            </studio.forface.fluentnotifications.demo.ExpandableLinearLayout>
            <!-- endregion -->

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    <!-- endregion -->

    <!-- region ConstraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:layout_gravity="bottom"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior">

        <!-- Guideline top -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/bottomBarVerticalMargin" />

        <!-- Guideline bottom -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/bottomBarVerticalMargin" />

        <!-- Delay -->
        <CheckBox
            android:id="@+id/delayCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_notification_delay"
            app:layout_constraintBaseline_toBaselineOf="@id/showNotificationButton"
            app:layout_constraintEnd_toStartOf="@+id/showNotificationButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:checked="true" />

        <!-- Send -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/showNotificationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_show_notification"
            app:icon="@drawable/ic_bell"
            app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
            app:layout_constraintTop_toBottomOf="@id/guidelineTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/delayCheckBox" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- endregion -->

</androidx.coordinatorlayout.widget.CoordinatorLayout>